# daily-scripts

./: .gitignore  AGENTS.md  CURSOR_MUST_READ.md  LICENSE  Microsoft_auto_login.user.js  README.md  army-recipes-download.sh  conntest.cpp  convert-fq-to-cram.sh  credit-card-payment-table.sh  csv-as-click-checklist.py  custom-html-price-modify.fish  docker-chatgpt-web.build.sh  dol-helper.js  fuckwin.ps1  gitlab-cleanup-repo.sh  gopeed-to-aria2.py  gpg-multiverfiy.fish  imap-list-recent.py  kbtap.cc  lab-bpcapture-15s.sh  ll-decode.bash  ll-dedup.fish  mail-advfilter.go  mailbox-cleaner.dockerfile  mcp-flight-search.sh  naive-shell-cli.py  naive-shell.go  parse-pse-data.py  paypal_scam_warning.user.js  pdf-alt-merge.sh  poc_aoai_websearch.sh  pse-usage-aggregate-by-date.py  publish-zipped-website.py  quick_push.sh  rdp-netcheck.go  rflog.h  rflog2.h  rflog3-server.cc  rflog3.h  (+12 more)
aes_bench/: aes256_easy.hpp  aes_bench.cpp
android/: adb.apis.md  clear_eleme.sh  eleme_auto_fuck_customer_service.fish  pixel3-qq-phone-loopcall.fish  qq_lib.fish  qq_screenshot.fish  qq_slide_up.fish
archived/: 1kbtransform.py  3hk-get-data.fish  _do_autostart_gnome.sh  _do_autostart_openbox.sh  g5.py  (+106 more)
archived/gsoc-notes/: CMakeLists.txt  boost-gsoc-quest-1.cc  boost-gsoc-quest-2.cc  boost-gsoc-quest-3.cc  note-deploy-key-for-gsoc.sh  sk-deploy-key-for-gsoc.sh
archived/gsoc-notes/deb/: hanoi.bash
npp-no-update/src-v1-portable/: Cargo.toml
npp-no-update/src-v1-portable/src/: main.rs
npp-no-update/src-v2/: .gitignore  Cargo.toml  build.rs  config.xml
npp-no-update/src-v2/src/: main.rs
(+521 files in other folders)
